--- a/css/nav.css
+++ b/css/nav.css
@@ -16,6 +16,7 @@ body {
 
 #nav {
   position: relative;
+  padding-top: 2%;
 }
 #nav ul {
   display: none;
@@ -27,14 +28,17 @@ body {
 #nav ul li a {
   display: block;
   padding: .8em;
-  background: #16a085;
+  /*background: #16a085;*/
+  background: #38619A;
   color: white;
   text-decoration: none;
   border-right: 1px solid #34495e;
   font-size: .9em;
+  opacity: .80;
 }
 #nav ul li a:hover {
-  background: #138a72;
+  /*background: #138a72;*/
+  background: #408BB4;
 }
 #nav ul li:last-of-type a {
   border-right: 0px;
@@ -75,10 +79,11 @@ body {
   font-size: .9em;
   margin: 0;
   cursor: pointer;
-  background: #16a085;
+  background: #38619A;
   line-height: 2em;
   color: white;
   text-align: left!important;
+  opacity: 0.80;
 }
 #nav label:after {
   position: absolute;
