--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ h2.dark {
   /*background-color: #afded4;*/
 }
 
-#welcome-text {
+#divider-text {
   padding: 2%;
 }
 
@@ -281,7 +281,7 @@ h2.dark {
 
   .pimg2 {
     background-image: url("img/next4weeks-2.jpg");
-    min-height: 400px;
+    min-height: 60%;
   }
 
   .pimg3 {
