green image. current version 0.9

--- a/css/nav.css
+++ b/css/nav.css
@@ -29,7 +29,8 @@ body {
   display: block;
   padding: .8em;
   /*background: #16a085;*/
-  background: #38619A;
+  /*background: #38619A;*/
+  background: #0B0C10;
   color: white;
   text-decoration: none;
   border-right: 1px solid #34495e;
@@ -37,8 +38,10 @@ body {
   opacity: .80;
 }
 #nav ul li a:hover {
+  background: #49afa6;
+  color: #0B0C10;
   /*background: #138a72;*/
-  background: #408BB4;
+  /*background: #408BB4;*/
 }
 #nav ul li:last-of-type a {
   border-right: 0px;
