--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ h2.dark {
   height: 100%;
   width: 100%;
   margin:auto;
-  background: url('../img/me.jpg') no-repeat 50% 50%;
+  background: url('../img/me-green.jpg') no-repeat 50% 50%;
   display: table;
   top: 0;
   background-size: cover;
