change image me. Still version 0.9

--- a/css/nav.css
+++ b/css/nav.css
@@ -82,7 +82,7 @@ body {
   font-size: .9em;
   margin: 0;
   cursor: pointer;
-  background: #38619A;
+  background: #0B0C10;
   line-height: 2em;
   color: white;
   text-align: left!important;
